Fix Chrome Flicker Bug
Fixed a bug in chrome that caused the page to spaz out when hovering over the first edit button on the page

--- a/css/basic.less
+++ b/css/basic.less
@@ -265,6 +265,10 @@ body {
   display:none;
 }
 
+.content-card__text > .editbutton_1 {
+  display:none;
+}
+
 .content-card__text {
   padding: 2em;
   padding-top: 0.5em;
